src/blocks/media-card/styles/editor.scss
.wp-block-coblocks-media-card {
	.editor-block-list__block[data-type="coblocks/media-card"] & &__inner {
		grid-template-areas:
			"media-text-media media-text-content"
			"resizer resizer";
	}

	.editor-block-list__block[data-type="coblocks/media-card"] &.is-style-right &__inner {
		grid-template-areas:
			"media-text-content media-text-media"
			"resizer resizer";
	}

	.__resizable_base__ {
		grid-area: resizer;
	}

	&__media-container {
		height: 100%;
		margin: 0;
		width: 100%;

		img,
		video {
			vertical-align: middle;
			width: 100%;
		}
	}

	// ResizableBox component.
	.editor-media-container__resizer {
		align-self: center;
		grid-area: media-text-media;
		width: 100% !important;

		// Moves the handles and creates a second one so we can manipulate the
		// ResizableBox component with the content card over the middle of the image.
		.components-resizable-box__handle-left,
		.components-resizable-box__handle-right {
			bottom: 0;
			height: 100%;
			top: 0;
			z-index: 99;

			&::before {
				position: absolute;
				top: -7px;
			}

			&::after {
				background: #0085ba;
				border: 2px solid #fff;
				border-radius: 50%;
				bottom: -7px;
				content: "";
				cursor: inherit;
				display: block;
				height: 16px;
				position: absolute;
				width: 16px;
			}
		}
	}

	> .editor-inner-blocks > .editor-block-list__layout > .editor-block-list__block {
		max-width: 100%;
	}

	.editor-media-container__resizer .components-resizable-box__handle {
		display: none;
	}

	&.is-selected:not(.is-stacked-on-mobile) {
		.editor-media-container__resizer .components-resizable-box__handle {
			display: block;
		}
	}

	@include break-small {
		&.is-selected.is-style-right {
			.editor-media-container__resizer .components-resizable-box__handle {
				display: block;
			}
		}
	}
}

.editor-block-list__block[data-type="coblocks/media-card"] {
	background: transparent !important;

	.has-no-media .components-placeholder {
		height: 70vw;
		margin-bottom: 0;
		margin-top: 0;
		max-height: 600px;
	}

	&[data-align="wide"],
	&[data-align="full"] {
		.has-no-media .components-placeholder {
			max-height: 700px;
		}
	}

	&[data-align="center"] {
		text-align: inherit;

		.components-placeholder__instructions {
			display: none;
		}
	}

	.components-placeholder {
		position: relative;

		&__instructions {
			max-width: 220px;

			@media (max-width: 960px) {
				display: none;
			}
		}
	}

	// Child blocks should not have a max-width.
	.editor-inner-blocks .wp-block {
		max-width: none;
	}

	// Add border to the image if the block is selected.
	&.is-selected .wp-block-coblocks-media-card__img-wrapper:not(.has-no-media) {
		outline: 4px solid #0085ba;
	}

	.wp-block[data-type="coblocks/row"] .editor-block-list__block-edit::before {
		outline-style: solid !important;
	}

	// Remove image button.
	.block-library-gallery-item__inline-menu {
		right: -4px;
		top: -4px;

		.blocks-gallery-item__remove {
			&:hover {
				background-color: #0085ba !important;
				box-shadow: none !important;
				color: rgba($white, 0.66) !important;
			}
		}
	}

	// Fixes dropZone component z-index (#31).
	.components-drop-zone {
		z-index: 0;
	}

	// Remove editor margins that do not exist on the frontend.
	.wp-block-coblocks-media-card__content {
		> .editor-inner-blocks {
			> .editor-block-list__layout {
				> .wp-block {
					&:first-child {
						> .editor-block-list__block-edit {
							margin-bottom: 0;
							margin-top: 0;
						}
						> .editor-block-list__insertion-point {
							display: none;
						}
					}
				}
				> div {
					> .editor-default-block-appender {
						display: none;
					}
				}
			}
		}
	}
}

// Style the core styles preview (#35).
// As Gutenberg does not support innerBlocks content within the editor yet, we need
// to style the previews to look better for now.
.editor-block-preview,
.editor-block-styles__item-preview {
	.wp-block-coblocks-media-card__inner {
		display: flex;
		padding: 0;
	}

	.wp-block-coblocks-media-card__img-wrapper {
		width: 120%;
	}

	.wp-block-coblocks-media-card__content {
		background: #535c65;
		display: block;
		height: 50px;
		width: 100%;
		margin-left: -15px;
	}

	.wp-block-coblocks-media-card,
	.wp-block-coblocks-media-card__inner,
	.wp-block-coblocks-media-card__img-wrapper {
		height: 100px;
	}

	.is-style-right .wp-block-coblocks-media-card__inner {
		flex-direction: row-reverse;

		.wp-block-coblocks-media-card__img-wrapper {
			left: -20%;
		}

		.wp-block-coblocks-media-card__content {
			margin-right: -15px;
		}
	}
}

.editor-block-preview {
	.wp-block-coblocks-media-card__content {
		height: 130px;
		margin-top: 120px;
	}
	.editor-styles-wrapper{
		overflow: hidden;
	}
}

.wp-block-coblocks-media-card {
	.editor-block-toolbar .components-toolbar:nth-child(2) {
		display: none;
	}
}

